--- a/_config.yml
+++ b/_config.yml
@@ -2,10 +2,10 @@
 #      Main Configs       #
 # ----------------------- #
 
-url: http://chucai.github.com
-title: 张合全的博客 
+url: http://chucai.github.io
+title: 张合权的博客 
 subtitle: 主要是研究金融.
-author: 张合全 
+author: 张合权 
 simple_search: https://www.google.com/search
 description:
 
